--- a/app/src/main/res/drawable/toolbar_gradient.xml
+++ b/app/src/main/res/drawable/toolbar_gradient.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#FF1E3A73"
-        android:endColor="#FF0D47A1"
-        android:angle="45" />
+        android:angle="135"
+        android:startColor="@color/colorPrimary"
+        android:endColor="@color/colorPrimaryDark"
+        android:type="linear" />
 </shape>
