--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,14 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#1E3A73</color>
-    <color name="colorPrimaryDark">#0D47A1</color>
+    <color name="colorPrimary">#1E88E5</color>
+    <color name="colorPrimaryDark">#1565C0</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="design_default_color_primary">#1E3A73</color>
-    <color name="design_default_color_primary_dark">#0D47A1</color>
-    <color name="design_default_color_error">#FF0000</color>
-
-    <!-- Colores adicionales para los botones -->
+    <color name="design_default_color_primary">#1E88E5</color>
+    <color name="design_default_color_primary_dark">#1565C0</color>
+    <color name="design_default_color_error">#F44336</color>
     <color name="button_color">#2196F3</color>
     <color name="success_color">#4CAF50</color>
 </resources>
