--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -29,7 +29,7 @@
                 android:contentDescription="Volver"
                 android:padding="12dp"
                 android:src="@drawable/ic_arrow_back"
-                android:tint="@android:color/white" />
+                app:tint="@android:color/white" />
 
             <TextView
                 android:layout_width="wrap_content"
