--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -54,11 +54,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Resumen del pedido -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Resumen del Pedido"
+                android:text="Resumen de tu Compra"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="16dp" />
